Cleanup test code